/**
 * This file was automatically generated by zod-to-proto.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source Zod schema.
 */

syntax = "proto3";
package default;

service TestService {
    rpc GetTest(GetTestRequest) returns (GetTestResponse);
}

message GetTestRequest {
    int32 projectId = 1;
}

message User {
    int32 id = 1;
    int32 projectId = 2;
    int32 userId = 3;
    string role = 4;
    bool isActive = 5;
    string createdAt = 6;
    string updatedAt = 7;
    double floatValue = 8;
    int32 numberValue = 9;
    bytes bytes = 10;
    User user = 11;
}

message GetTestResponse {
    repeated User users = 1;
}